docs/api/qiskit/0.43/qiskit.transpiler.passes.PulseGates.mdx
---
title: PulseGates
description: API reference for qiskit.transpiler.passes.PulseGates
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.PulseGates
---

# PulseGates

<Class id="qiskit.transpiler.passes.PulseGates" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/calibration/pulse_gate.py" signature="PulseGates(*args, **kwargs)">
  Bases: `CalibrationBuilder`

  Pulse gate adding pass.

  This pass adds gate calibrations from the supplied `InstructionScheduleMap` to a quantum circuit.

  This pass checks each DAG circuit node and acquires a corresponding schedule from the instruction schedule map object that may be provided by the target backend. Because this map is a mutable object, the end-user can provide a configured backend to execute the circuit with customized gate implementations.

  This mapping object returns a schedule with “publisher” metadata which is an integer Enum value representing who created the gate schedule. If the gate schedule is provided by end-users, this pass attaches the schedule to the DAG circuit as a calibration.

  This pass allows users to easily override quantum circuit with custom gate definitions without directly dealing with those schedules.

  **References**

  *   \[1] OpenQASM 3: A broader and deeper quantum assembly language [https://arxiv.org/abs/2104.14722](https://arxiv.org/abs/2104.14722)

  Create new pass.

  **Parameters**

  *   **inst\_map** – Instruction schedule map that user may override.
  *   **target** – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") representing the target backend, if both `inst_map` and this are specified then it updates instructions in the `target` with `inst_map`.

  ## Methods

  <span id="qiskit-transpiler-passes-pulsegates-get-calibration" />

  ### get\_calibration

  <Function id="qiskit.transpiler.passes.PulseGates.get_calibration" name="get_calibration" signature="PulseGates.get_calibration(node_op, qubits)">
    Gets the calibrated schedule for the given instruction and qubits.

    **Parameters**

    *   **node\_op** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")) – Target instruction object.
    *   **qubits** (*List*) – Integer qubit indices to check.

    **Returns**

    Return Schedule of target gate instruction.

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – When node is parameterized and calibration is raw schedule object.

    **Return type**

    [*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule") | [*ScheduleBlock*](qiskit.pulse.ScheduleBlock "qiskit.pulse.schedule.ScheduleBlock")
  </Function>

  <span id="qiskit-transpiler-passes-pulsegates-name" />

  ### name

  <Function id="qiskit.transpiler.passes.PulseGates.name" name="name" signature="PulseGates.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-pulsegates-run" />

  ### run

  <Function id="qiskit.transpiler.passes.PulseGates.run" name="run" signature="PulseGates.run(dag)">
    Run the calibration adder pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")) – DAG to schedule.

    **Returns**

    A DAG with calibrations added to it.

    **Return type**

    [*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")
  </Function>

  <span id="qiskit-transpiler-passes-pulsegates-supported" />

  ### supported

  <Function id="qiskit.transpiler.passes.PulseGates.supported" name="supported" signature="PulseGates.supported(node_op, qubits)">
    Determine if a given node supports the calibration.

    **Parameters**

    *   **node\_op** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")) – Target instruction object.
    *   **qubits** (*List*) – Integer qubit indices to check.

    **Returns**

    Return `True` is calibration can be provided.

    **Return type**

    bool
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.PulseGates.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.PulseGates.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

